# funky

./: .gitignore  .testrunner  .travis.yml  Cargo.toml  Makefile  README.md  call.run  ci.sh  flamegraph.sh  gcd.wasm  perf_record.sh  perf_report.sh  run.sh  run_spec_tests.py  spec_tests.sh  test_stats.sh  wolkentreiber.py  wolkentreiber.sh
hustensaft/: Cargo.toml
hustensaft/src/: main.rs  util.rs
ide/: Cargo.toml  dot.sh  tikz.sh
ide/benches/: bench.rs  fib.rs
ide/src/: counter.rs  grammar.lalrpop  lib.rs  main.rs  symbol_table.rs
ide/src/icfg/: convert.rs  convert2.rs  graph.rs  graph2.rs  graphviz.rs  mod.rs  tikz.rs
ide/src/ir/: ast.rs  mod.rs  wasm_ast.rs
ide/src/ir/csp/: mod.rs
ide/src/solver/: bfs.rs  mod.rs
ide/src/ssa/: ast.rs  mod.rs  wasm_ast.rs
ide/src/tests/: mod.rs
ide/src/tests/icfg/: convert.rs  convert2.rs  mod.rs
ide/src/tests/icfg/snapshots/: ide__tests__icfg__convert2__test_ir_binop_dot.snap  ide__tests__icfg__convert2__test_ir_binop_offset_dot.snap  ide__tests__icfg__convert2__test_ir_block_dot.snap  ide__tests__icfg__convert2__test_ir_chain_assign_dot.snap  ide__tests__icfg__convert2__test_ir_const_dot.snap  ide__tests__icfg__convert2__test_ir_double_const_dot.snap  ide__tests__icfg__convert2__test_ir_double_const_dot.snap.new  ide__tests__icfg__convert2__test_ir_early_return_dot.snap  ide__tests__icfg__convert2__test_ir_early_return_dot.snap.new  ide__tests__icfg__convert2__test_ir_functions_dot.snap  ide__tests__icfg__convert2__test_ir_if_dot.snap  ide__tests__icfg__convert2__test_ir_if_else_dot.snap  ide__tests__icfg__convert2__test_ir_killing_op_dot.snap  ide__tests__icfg__convert2__test_ir_loop_dot.snap  ide__tests__icfg__convert2__test_ir_overwrite_return_values_dot.snap  ide__tests__icfg__convert2__test_ir_overwrite_return_values_dot.snap.new  ide__tests__icfg__convert2__test_ir_phi_dot.snap  ide__tests__icfg__convert2__test_ir_return_branches_dot.snap  ide__tests__icfg__convert2__test_ir_return_branches_dot.snap.new  ide__tests__icfg__convert2__test_ir_return_dot.snap  ide__tests__icfg__convert2__test_ir_return_dot.snap.new  ide__tests__icfg__convert2__test_ir_return_passed_value_dot.snap  ide__tests__icfg__convert2__test_ir_return_passed_value_dot.snap.new  ide__tests__icfg__convert2__test_ir_return_values2_dot.snap  ide__tests__icfg__convert2__test_ir_return_values3_dot.snap  ide__tests__icfg__convert2__test_ir_return_values_dot.snap  ide__tests__icfg__convert2__test_ir_return_values_dot.snap.new  ide__tests__icfg__convert2__test_ir_self_loop_dot.snap  ide__tests__icfg__convert2__test_ir_table_dot.snap  ide__tests__icfg__convert2__test_ir_unop_dot.snap  ide__tests__icfg__convert__test_ir_assignment.snap  ide__tests__icfg__convert__test_ir_assignment_dot.snap  ide__tests__icfg__convert__test_ir_binop.snap  ide__tests__icfg__convert__test_ir_binop_dot.snap  ide__tests__icfg__convert__test_ir_binop_offset_dot.snap  ide__tests__icfg__convert__test_ir_block.snap  ide__tests__icfg__convert__test_ir_block_dot.snap  ide__tests__icfg__convert__test_ir_chain_assign_dot.snap  ide__tests__icfg__convert__test_ir_const.snap  ide__tests__icfg__convert__test_ir_const_dot.snap  (+35 more)
ide/src/tests/integration/: mod.rs
ide/src/tests/integration/snapshots/: ide__tests__integration__add.snap  ide__tests__integration__block_add.snap  ide__tests__integration__br_table.snap  ide__tests__integration__fac.snap  ide__tests__integration__fib.snap  ide__tests__integration__fib_func_1.snap
ide/src/tests/ir/: mod.rs  parser.rs  wat.rs
ide/src/tests/ir/snapshots/: ide__tests__ir__wat__local_tee.snap  ide__tests__ir__wat__test_br_table.snap  ide__tests__ir__wat__test_call.snap  ide__tests__ir__wat__test_call_indirect.snap.new  (+15 more)
ide/src/tests/solver/: mod.rs
ide/src/tests/ssa/: mod.rs  parser.rs  wat.rs
ifds/: .gitignore  Cargo.toml  benchmark.py  compare.sh  current.sh
ifds/benches/: bench.rs
ifds/src/: counter.rs  grammar.lalrpop  keyboard.rs  lib.rs  main.rs  meta.rs  symbol_table.rs
ifds/src/icfg/: convert.rs  graph.rs  mod.rs  state.rs  tikz.rs  tikz2.rs
ifds/src/icfg/flowfuncs/: mod.rs
ifds/src/icfg/naive/: convert.rs
ifds/src/icfg/orig/: convert.rs
ifds/src/icfg/tabulation/: fast.rs  mod.rs  naive.rs  orig.rs  sparse.rs
ifds/src/ir/: ast.rs  mod.rs  wasm_ast.rs
ifds/src/solver/: bfs.rs  mod.rs
ifds/src/tests/: mod.rs
ifds/src/tests/icfg/: .gitignore  convert.rs  fast.rs  initial.rs  mod.rs  normal_flow.rs  sparse.rs
ifds/src/tests/integration/: mod.rs
ifds/src/tests/ir/: mod.rs  parser.rs  wasm.rs  wat.rs
ifds/src/tests/solver/: mod.rs  naive.rs
ifds/src/tests/unit/: end_procedure.rs  handle_call.rs  handle_return.rs  mod.rs
ifds/src/tests/verification/: mod.rs
test_runner/: Cargo.toml
test_runner/src/: json.rs  main.rs
testrunner2/: Cargo.toml
testrunner2/src/: core.rs  json.rs  main.rs
validation/: Cargo.toml  add_i64.ast.json
validation/src/: concat.rs  extract.rs  instructions.rs  lib.rs  main.rs
wasm_parser/: Cargo.toml  i32.wat  if_loop.watt
wasm_parser/src/: core.rs  instructions.rs  isa.rs  leb128.rs  lib.rs  main.rs
wasm_parser/src/snapshots/: wasm_parser__tests__add_i64.wasm.snap  wasm_parser__tests__arithmetic.wasm.snap  wasm_parser__tests__arithmetic_f32.wasm.snap  wasm_parser__tests__as_loop_mid_br_if.wasm.snap  wasm_parser__tests__block_add_i32.wasm.snap  wasm_parser__tests__empty.wasm.snap  wasm_parser__tests__function_call.wasm.snap  wasm_parser__tests__function_call.wasm.snap.new  wasm_parser__tests__gcd.wasm.snap  wasm_parser__tests__global.wasm.snap  wasm_parser__tests__if_loop.wasm.snap  wasm_parser__tests__logic.wasm.snap  wasm_parser__tests__loop_mult.wasm.snap  wasm_parser__tests__mult_i64.wasm.snap  wasm_parser__tests__return_i32.wasm.snap  wasm_parser__tests__return_i64.wasm.snap  wasm_parser__tests__sub_i64.wasm.snap  wasm_parser__tests__unreachable.wasm.snap
wasm_parser/test_files/: add_i64.wasm  arithmetic.wasm  arithmetic_f32.wasm  arithmetic_i32.wasm  block_add_i32.wasm  function_call.wasm  if.wasm  logic.wasm  loop_mult.wasm  simple_bg.wasm  sub_i64.wasm
(+513 files in other folders)
