[package]
name = "hustensaft"
version = "0.1.0"
authors = ["kper <kevin.per@protonmail.com>"]
edition = "2018"
decription = "This is a debugger for the funky wasm engine"

[dependencies]
wasm-parser = { path = "../wasm_parser" }
funky = { path = "../" }
validation = { path = "../validation" }
tui = "0.13"
termion = "1.5"
anyhow = "1.0.32"
env_logger = "0.7"
log = { version = "*", features = ["release_max_level_off"] }
docopt = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.56" 
