[package]
name = "testrunner"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0"
funky = { path = "../" }
wasm-parser = { path = "../wasm_parser" }
log = "*"
env_logger = "*"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0.32"