[package]
name = "validation"
version = "0.1.0"
authors = ["Dominik Süß", "Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[lib]
path  = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "validation"


[dependencies]
wasm-parser = { path = "../wasm_parser" }
env_logger = "0.7"
log = "*"
serde = { version = "1", features = ["derive"] }
docopt = "1"
serde_json = "1.0"
anyhow = "1.0.32"
