[package]
name = "wasm-parser"
version = "0.1.0"
authors = ["Dominik Süß", "Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path  = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wasm_parser"

[dependencies]
env_logger = "0.7"
log = "*"
nom = "5.1"
byteorder = "*"
