[package]
name = "wasm-parser"
version = "0.1.0"
authors = ["Dominik Süß", "Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[lib]
path  = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wasm_parser"

[dependencies]
env_logger = "0.7"
log = "*"
nom = "5.1"
byteorder = "*"
docopt = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.32"
custom_display = { path = "../custom_display" }

[dev-dependencies]
insta = "*"
